Fixed filter misalignment issue

--- a/adminer.css
+++ b/adminer.css
@@ -581,9 +581,10 @@ sup {
 #content #form fieldset:nth-of-type(1) {
 	/* display: none */
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-	position: relative;
+	/* position: relative; */
 	top: 57px;
 	padding: 7px 10px;
+	padding-bottom: 11px;
 }
 #content fieldset:nth-of-type(2).jsonly {
 	float: right;
